--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,39 +1,24 @@
 @font-face {
-  font-family: "Inter";
+  font-family: "Proxima Nova Rg";
+  src: url(../fonts/ProximaNova-Regular/ProximaNova-Regular.eot);
+  src: url(../fonts/ProximaNova-Regular/ProximaNova-Regular.eot?#iefix)
+      format("embedded-opentype"),
+    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.eot)
+      format("embedded-opentype"),
+    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.woff) format("woff"),
+    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.woff2) format("woff2"),
+    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.ttf) format("truetype");
+  font-weight: normal;
   font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(../fonts/Inter-Regular/Inter-Regular.woff2) format("woff2"),
-    url(../fonts/Inter-Regular/Inter-Regular.woff) format("woff"),
-    url(../fonts/Inter-Regular/Inter-Regular.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: "Inter";
-  font-style: medium;
-  font-weight: 500;
-  font-display: swap;
-  src: url(../fonts/Inter-Medium/Inter-Medium.woff2) format("woff2"),
-    url(../fonts/Inter-Medium/Inter-Medium.woff) format("woff"),
-    url(../fonts/Inter-Medium/Inter-Medium.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: bold;
-  font-weight: 700;
-  font-display: swap;
-  src: url(../fonts/Inter-Bold/Inter-Bold.woff2) format("woff2"),
-    url(../fonts/Inter-Bold/Inter-Bold.woff) format("woff"),
-    url(../fonts/Inter-Bold/Inter-Bold.ttf) format("truetype");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-style: black;
-  font-weight: 900;
-  font-display: swap;
-  src: url(../fonts/Inter-Black/Inter-Black.woff2) format("woff2"),
-    url(../fonts/Inter-Black/Inter-Black.woff) format("woff"),
-    url(../fonts/Inter-Black/Inter-Black.ttf) format("truetype");
+  font-family: "Proxima Nova Bold";
+  src: url("./ProximaNova-Bold/proxima_nova_bold.eot");
+  src: url("./ProximaNova-Bold/proxima_nova_bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("./ProximaNova-Bold/proxima_nova_bold.woff") format("woff"),
+    url("./ProximaNova-Bold/proxima_nova_bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
