--- a/pages/index.css
+++ b/pages/index.css
@@ -1,2 +1,8 @@
-@import url(../blocks/task1/main/main.css);
-@import url(../blocks/task1/logo-list/logo-list.css);
+@import url(../vendor/normalize.css);
+@import url(../fonts/fonts.css);
+@import url(../blocks/body/body.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/main/main.css);
+@import url(../blocks/tasks-list/tasks-list.css);
+@import url(../blocks/info/info.css);
+@import url(../blocks/footer/footer.css);
