--- a/task4/blocks/slider/__img/slider__img.css
+++ b/task4/blocks/slider/__img/slider__img.css
@@ -1,25 +1,21 @@
-.block__img {
-  width: 60%;
-  height: 400px;
+.slider__img {
+  width: 100%;
   object-fit: contain;
-  object-position: center;
   font-family: "Proxima Nova Bold", Arial, sans-serif;
+  line-height: 3em;
   color: #000;
   text-align: center;
   min-height: 3em;
-  display: block;
-  position: relative;
 }
 
-.block__img::before {
+.slider__img::before {
   content: "The picture is broken :(";
   display: block;
 }
 
-.block__img::after {
+.slider__img::after {
   content: " " " " attr(alt);
   z-index: 1;
-  line-height: 3em;
   color: rgb(100, 100, 100);
   display: block;
   position: absolute;
@@ -28,11 +24,4 @@
   width: 100%;
   height: 100%;
   background-color: #ccc;
-}
-
-@media (max-width: 600px) {
-  .block__img {
-    order: -1;
-    width: 100%;
-  }
 }
