--- a/task5/blocks/header-menu/__item/header-menu__item.css
+++ b/task5/blocks/header-menu/__item/header-menu__item.css
@@ -3,6 +3,7 @@
   width: 30%;
   text-align: center;
 }
+
 .header-menu__item:after {
   content: "";
   position: absolute;
@@ -10,10 +11,11 @@
   width: 1px;
   height: 12px;
   background: #d2d2d2;
-  top: 24px;
+  top: 3px;
   box-shadow: 4px -2px 0 #d2d2d2;
   transform: rotate(30deg);
 }
+
 .header-menu__item:last-child:after {
   background: none;
   box-shadow: none;
@@ -35,7 +37,7 @@
 
 @media (max-width: 500px) {
   .header-menu__item:after {
-    top: 20px;
+    top: -1px;
+    right: 7px;
   }
-
 }
