--- a/task5/blocks/header-menu/__link/header-menu__link.css
+++ b/task5/blocks/header-menu/__link/header-menu__link.css
@@ -3,11 +3,10 @@
   transition: 0.4s ease-in-out;
   text-decoration: none;
   cursor: pointer;
-  color: #000;
+  color: inherit;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
-  padding: 20px;
 }
 
 .header-menu__link:hover {
