--- a/task5/blocks/header/__logo/header__logo.css
+++ b/task5/blocks/header/__logo/header__logo.css
@@ -1,3 +1,9 @@
 .header__logo {
-  width: 100px;
+  background-image: url("../../../../images/task1/frenchConnection.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 150px;
+  height: 30px;
+  transition: 1s linear;
 }
