--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,6 +1,7 @@
 .body {
   max-width: 1280px;
   min-width: 300px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: auto;
