--- a/blocks/info/info.css
+++ b/blocks/info/info.css
@@ -4,6 +4,8 @@
 .info {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 50%;
   font-size: 1rem;
 }
