--- a/task1/blocks/logo-list/logo-list.css
+++ b/task1/blocks/logo-list/logo-list.css
@@ -3,6 +3,9 @@
 @import url(./__img/logo-list__img.css);
 
 .logo-list {
+  background-color: #00b19d;
+  min-height: 200px;
+  display: flex;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
@@ -10,4 +13,22 @@
   align-items: center;
   padding: 0;
   margin: 0;
+}
+
+@media (max-width: 700px) {
+  .logo-list {
+    padding: 40px 40px 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .logo-list {
+    padding: 40px 80px 0;
+  }
+}
+
+@media (max-width: 400px) {
+  .logo-list {
+    padding: 80px 80px 40px;
+  }
 }
