--- a/task1/blocks/main/main.css
+++ b/task1/blocks/main/main.css
@@ -1,24 +1,3 @@
 .main {
-  background-color: #00b19d;
-  min-height: 200px;
-  display: flex;
-  align-items: center;
-}
-
-@media (max-width: 700px) {
-  .main {
-    padding: 40px 40px 0;
-  }
-}
-
-@media (max-width: 600px) {
-  .main {
-    padding: 40px 80px 0;
-  }
-}
-
-@media (max-width: 400px) {
-  .main {
-    padding: 80px 80px 40px;
-  }
+  flex: auto;
 }
