--- a/task6/blocks/body/body.css
+++ b/task6/blocks/body/body.css
@@ -1,7 +1,7 @@
 .body {
-  max-width: 1280px;
+  font-family: "Proxima Nova Regular", Arial, sans-serif;
   min-width: 300px;
-  padding: 40px;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   margin: auto;
