--- a/task4/blocks/slider/__text/slider__text.css
+++ b/task4/blocks/slider/__text/slider__text.css
@@ -1,5 +1,6 @@
 .slider__text {
-  font-family: "Proxima Nova Bold", Arial, sans-serif;
+  font-family: "Inter-Bold", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   display: -webkit-box;
   -webkit-line-clamp: 15;
   -webkit-box-orient: vertical;
@@ -28,7 +29,7 @@
 @media (max-width: 500px) {
   .slider__text {
     font-size: 8px;
-    max-width: 135px;
+    max-width: 140px;
     height: 90px;
     bottom: -30px;
     right: 10px;
