--- a/task5/blocks/main/main.css
+++ b/task5/blocks/main/main.css
@@ -3,7 +3,8 @@
 
 .main {
   max-width: 1280px;
-  font-family: "Proxima Nova Bold", Arial, sans-serif;
+  font-family: "Inter-Bold", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
