--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 @import url(./__title/header__title.css);
 
 .header {
-  font-family: "Proxima Nova Bold", Arial, sans-serif;
+  font-family: "Inter-Bold", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   display: flex;
   text-align: center;
 }
