--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,24 +1,19 @@
 @font-face {
-  font-family: "Proxima Nova Rg";
-  src: url(../fonts/ProximaNova-Regular/ProximaNova-Regular.eot);
-  src: url(../fonts/ProximaNova-Regular/ProximaNova-Regular.eot?#iefix)
-      format("embedded-opentype"),
-    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.eot)
-      format("embedded-opentype"),
-    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.woff) format("woff"),
-    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.woff2) format("woff2"),
-    url(../fonts/ProximaNova-Regular/ProximaNova-Regular.ttf) format("truetype");
-  font-weight: normal;
+  font-family: "Inter-Regular";
   font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(../fonts/Inter-Regular/Inter-Regular.woff2) format("woff2"),
+    url(../fonts/Inter-Regular/Inter-Regular.woff) format("woff"),
+    url(../fonts/Inter-Regular/Inter-Regular.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: "Proxima Nova Bold";
-  src: url("./ProximaNova-Bold/proxima_nova_bold.eot");
-  src: url("./ProximaNova-Bold/proxima_nova_bold.eot?#iefix")
-      format("embedded-opentype"),
-    url("./ProximaNova-Bold/proxima_nova_bold.woff") format("woff"),
-    url("./ProximaNova-Bold/proxima_nova_bold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "Inter-Bold";
+  font-style: bold;
+  font-weight: 700;
+  font-display: swap;
+  src: url(../fonts/Inter-Bold/Inter-Bold.woff2) format("woff2"),
+    url(../fonts/Inter-Bold/Inter-Bold.woff) format("woff"),
+    url(../fonts/Inter-Bold/Inter-Bold.ttf) format("truetype");
 }
