--- a/task4/blocks/footer/__content/footer__content.css
+++ b/task4/blocks/footer/__content/footer__content.css
@@ -1,3 +1,4 @@
 .footer__content {
-  font-family: "Proxima Nova Rg", Arial, sans-serif;
+  font-family: "Inter-Regular", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
 }
