--- a/task5/blocks/header/header.css
+++ b/task5/blocks/header/header.css
@@ -3,7 +3,8 @@
 
 .header {
   width: 100%;
-  font-family: "Proxima Nova Bold", Arial, sans-serif;
+  font-family: "Inter-Bold", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   background-color: #fff;
   height: 50px;
   display: flex;
