--- a/task6/blocks/body/body.css
+++ b/task6/blocks/body/body.css
@@ -1,5 +1,6 @@
 .body {
-  font-family: "Proxima Nova Regular", Arial, sans-serif;
+  font-family: "Inter-Regular", Arial, sans-serif;
+  text-rendering: optimizeLegibility;
   min-width: 300px;
   max-width: 1280px;
   display: flex;
