--- a/task5/blocks/header/__logo/_scroll/header__logo_scroll.css
+++ b/task5/blocks/header/__logo/_scroll/header__logo_scroll.css
@@ -1,5 +1,5 @@
 .header__logo_scroll {
-  background-image: url("../../../../../images/task5/frenchConnection_1.png");
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
   transform: scale(.5, .5);
   transition: 1s linear;
 }
