--- a/blocks/info/__img/info__img.css
+++ b/blocks/info/__img/info__img.css
@@ -1,9 +1,32 @@
 .info__img {
   width: 150px;
-  height: auto;
+  height:150px;
   border: 5px solid #fff;
   border-radius: 50%;
   margin: 0 auto;
+  object-fit: contain;
+  object-position: center;
+  font-family: "Inter-Bold", Arial, sans-serif;
+  color: #000;
+  text-align: center;
+  min-height: 3em;
+  display: block;
+  position: relative;
+}
+
+.info__img::after {
+  border-radius: 50%;
+  content: " " " " attr(alt);
+  z-index: 1;
+  line-height: 3em;
+  color: rgb(100, 100, 100);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ccc;
 }
 
 @media (max-width: 500px) {
