--- a/task7/blocks/place/__image/place__image.css
+++ b/task7/blocks/place/__image/place__image.css
@@ -1,9 +1,12 @@
 .place__image {
   max-width: 460px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   -o-object-position: center;
-     object-position: center;
+  object-position: center;
+  font-family: "Inter-Bold", Arial, sans-serif;
+  color: #fff;;
+  text-align: center;
 }
 
 @media (max-width: 1024px) {
@@ -41,7 +44,6 @@
     margin: auto;
   }
 }
-
 
 @media (max-width: 375px) {
   .place__image {
