--- a/task5/blocks/body/body.css
+++ b/task5/blocks/body/body.css
@@ -7,9 +7,15 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   min-width: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   margin: auto;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   min-height: 100vh;
 }
