--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,4 @@
 @import url(../blocks/main/main.css);
 @import url(../blocks/tasks-list/tasks-list.css);
 @import url(../blocks/info/info.css);
-@import url(../blocks/footer/footer.css)
+@import url(../blocks/footer/footer.css);
