--- a/task12-1/blocks/footer/footer.css
+++ b/task12-1/blocks/footer/footer.css
@@ -5,6 +5,7 @@
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: end;
+  padding-right: 20px;
   -ms-flex-negative: 0;
   flex-shrink: 0;
 }
