--- a/task12-1/task12.css
+++ b/task12-1/task12.css
@@ -3,14 +3,9 @@
 @import url(./blocks/body/body.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/main/main.css);
-@import url(./blocks/screen/screen.css);
-@import url(./blocks/layer/layer.css);
+@import url(./blocks/add-button/add-button.css);
+@import url(./blocks/button-close/button-close.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/_opacity/popup_opacity.css);
 @import url(./blocks/footer/footer.css);
-
-.circle {
-  border-radius: 50%;
-  background-color: #00b19d;
-}
