--- a/task12/blocks/main/main.css
+++ b/task12/blocks/main/main.css
@@ -6,8 +6,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 30px;
 }
