--- a/task11/blocks/screen/_first/screen_first.css
+++ b/task11/blocks/screen/_first/screen_first.css
@@ -1,4 +1,5 @@
 .screen_first {
-  display: none;
+  /* display: none; */
+  position: relative;
   background-image:url(../../../../images/task11/sáreen-1.jpg);
 }
