--- a/task11/task11.css
+++ b/task11/task11.css
@@ -10,7 +10,40 @@
 @import url(./blocks/popup/_opacity/popup_opacity.css);
 @import url(./blocks/footer/footer.css);
 
-.circle {
+/* .circle_green {
   border-radius: 50%;
-  background-color: #00b19d;
+  border: solid 0px #00b19d;
+  width: 0px;
+  height: 0px;
 }
+
+.circle_grey {
+  border-radius: 50%;
+  border: solid 10px #808080;
+  width: 5px;
+  height: 5px;
+} */
+
+
+.pulse_green {
+    position: absolute;
+    border: solid 1px #00b19d;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    opacity: 1;
+    animation: pulse 0.4s ease-in-out;
+
+}
+
+.pulse_green:hover {
+transform: scale(2);
+}
+
+/* @keyframes pulse_green {
+    to {
+
+        border: solid 0px #00b19d;
+    }
+} */
+
