--- a/blocks/tasks-list/tasks-list.css
+++ b/blocks/tasks-list/tasks-list.css
@@ -3,7 +3,6 @@
 
 .tasks-list {
   font-size: 1.5rem;
-  width: 50%;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -12,4 +11,7 @@
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
