--- a/task12/blocks/main/main.css
+++ b/task12/blocks/main/main.css
@@ -6,7 +6,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding: 30px;
 }
