--- a/task13/blocks/main/main.css
+++ b/task13/blocks/main/main.css
@@ -1,3 +1,5 @@
+ @import url(./__title/main__title.css);
+
 .main {
   background-color: #00b19d;
   -webkit-box-flex: 1;
@@ -6,8 +8,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 30px;
 }
